--- a/web/libs/ui/src/lib/toggle/toggle.module.scss
+++ b/web/libs/ui/src/lib/toggle/toggle.module.scss
@@ -1,4 +1,4 @@
-.toggle-dm {
+.toggle {
   width: 42px;
   height: 24px;
   display: block;
@@ -7,9 +7,10 @@
   border-radius: 12px;
   position: relative;
   cursor: pointer;
+  color: var(--toggle-color, var(--grape_500));
   transition: box-shadow 80ms ease;
-  background: linear-gradient(0deg, var(--black_5), var(--black_5)), #FFF;
-  box-shadow: inset 0 1px 0 var(--black_5), inset 0 0 0 1px var(--black_5);
+  background: linear-gradient(0deg, rgb(0 0 0 / 5%), rgb(0 0 0 / 5%)), var(--sand_0);
+  box-shadow: inset 0 1px 0 rgb(0 0 0 / 5%), inset 0 0 0 1px rgb(0 0 0 / 5%);
 
   &__input {
     top: 0;
@@ -36,8 +37,8 @@
       height: 10px;
       border-radius: 100%;
       transition: all 120ms ease;
-      background: rgba(var(--black-raw), 0.12);
-      box-shadow: 0 5px 10px var(--black_15), inset 0 -1px 0 var(--black_10), inset 0 0 0 1px var(--black_5);
+      background: var(--sand_200);
+      box-shadow: 0 5px 10px rgb(0 0 0 / 15%), inset 0 -1px 0 rgb(0 0 0 / 10%), inset 0 0 0 1px rgb(0 0 0 / 5%);
     }
   }
 
@@ -47,15 +48,24 @@
     &::before {
       width: 16px;
       height: 16px;
-      background: var(--accent_color);
-      box-shadow: 0 5px 10px rgb(var(--accent_color-raw) / 30%), inset 0 -1px 0 var(--black_10);
+      background: currentcolor;
+      box-shadow: 0 5px 10px var(--grape_100), inset 0 -1px 0 rgb(0 0 0 / 10%);
+    }
+  }
+
+  &_alwaysBlue &__indicator {
+    &::before {
+      width: 16px;
+      height: 16px;
+      background: var(--primary_link);
+      box-shadow: 0 5px 10px var(--grape_100), inset 0 -1px 0 rgb(0 0 0 / 10%);
     }
   }
 
   &_disabled {
     box-shadow: none;
     pointer-events: none;
-    background: rgb(0 0 0 / 8%);
+    background: var(--sand_200);
   }
 
   &_disabled &__indicator {
@@ -66,6 +76,6 @@
   &_disabled.toggle_checked &__indicator::before {
     box-shadow: none;
     transition: none;
-    background-color: rgb(0 0 0 / 12%);
+    background-color: var(--sand_500);
   }
 }
