--- a/web/libs/ui/src/tailwind.css
+++ b/web/libs/ui/src/tailwind.css
@@ -1,7 +1,10 @@
-@config "./tailwind.config.js";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply text-lsNeutralContent;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
@@ -24,7 +27,7 @@ h6 { font-size: 0.67em; }
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
-    --primary: 221.2 83.2% 53.3%;
+    --primary: 228 38% 48%;
     --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -34,7 +37,7 @@ h6 { font-size: 0.67em; }
     --accent-foreground: 222.2 47.4% 11.2%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
+    --border: 228 38% 35%;
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
@@ -71,5 +74,8 @@ h6 { font-size: 0.67em; }
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
   }
-}
 
+  a {
+    @apply text-lsPrimaryContent;
+  }
+}
